--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
@@ -159,6 +159,10 @@
                  <name>{{ aclsauthz_prefix ~ "kafka_connect.acl" }}</name>
                  <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
             </param>
+            <param>
+                 <name>{{ aclsauthz_prefix ~ "opdb_agent.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+            </param>
         </provider>
 {%- endif %}
 
@@ -313,6 +317,12 @@
             {% if 'KAFKA_CONNECT' in exposed and 'KAFKA_CONNECT' in salt['pillar.get']('gateway:location') -%}
             <param>
                 <name>KAFKA_CONNECT</name>
+                <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000</value>
+            </param>
+            {%- endif %}
+            {% if 'OPDB_AGENT' in exposed and 'OPDB_AGENT' in salt['pillar.get']('gateway:location') -%}
+            <param>
+                <name>OPDB_AGENT</name>
                 <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000</value>
             </param>
             {%- endif %}
@@ -675,6 +685,17 @@
         <role>SPARK3HISTORYUI</role>
         {% for hostloc in salt['pillar.get']('gateway:location')['SPARK3_YARN_HISTORY_SERVER'] -%}
         <url>{{ protocol }}://{{ hostloc }}:{{ ports['SPARK3HISTORYUI'] }}/</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {%- endif %}
+
+    {% if 'OPDB_AGENT' in salt['pillar.get']('gateway:location') -%}
+    {% if 'OPDB_AGENT' in exposed -%}
+    <service>
+        <role>OPDB_AGENT</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['OPDB_AGENT'] -%}
+        <url>{{ protocol }}://{{ hostloc }}:{{ ports['OPDB_AGENT'] }}/</url>
         {%- endfor %}
     </service>
     {%- endif %}
