--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology.xml.j2
@@ -70,6 +70,10 @@
                  <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
              </param>
              <param>
+                 <name>{{ aclsauthz_prefix ~ "query_processor.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+             </param>
+             <param>
                  <name>{{ aclsauthz_prefix ~ "hbaseui.acl" }}</name>
                  <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
              </param>
@@ -377,6 +381,13 @@
              {% if 'DAS' in exposed and 'DAS_WEBAPP' in salt['pillar.get']('gateway:location') -%}
              <param>
                  <name>DAS</name>
+                 <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000</value>
+             </param>
+             {%- endif %}
+
+             {% if 'QUERY_PROCESSOR' in exposed and 'QUERY_PROCESSOR' in salt['pillar.get']('gateway:location') -%}
+             <param>
+                 <name>QUERY_PROCESSOR</name>
                  <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000</value>
              </param>
              {%- endif %}
@@ -819,6 +830,17 @@
         <role>DAS</role>
         {% for hostloc in salt['pillar.get']('gateway:location')['DAS_WEBAPP'] -%}
         <url>{{ protocol }}://{{ hostloc }}:{{ ports['DAS'] }}</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {%- endif %}
+
+    {% if 'QUERY_PROCESSOR' in salt['pillar.get']('gateway:location') -%}
+    {% if 'QUERY_PROCESSOR' in exposed -%}
+    <service>
+        <role>QUERY_PROCESSOR</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['QUERY_PROCESSOR'] -%}
+        <url>{{ protocol }}://{{ hostloc }}:{{ ports['QUERY_PROCESSOR'] }}</url>
         {%- endfor %}
     </service>
     {%- endif %}
