--- a/orchestrator-salt/src/main/resources/salt/salt/metering/template/generate_heartbeats.ini.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/metering/template/generate_heartbeats.ini.j2
@@ -4,6 +4,7 @@
 [Event]
 ServiceVersion = {{ metering.serviceVersion }}{% if metering.version > 1 %}
 ServiceType = {{ metering.serviceType }}
+{% if grains['hostgroup'] is defined and salt['grains.get']('hostgroup') != None %}HostGroup = {{ salt['grains.get']('hostgroup') }}{% endif %}
 {% if metering.serviceFeature %}ServiceConfiguration = {{ metering.serviceFeature }} {% endif %}
 MeteredResourceName = {{ metering.meteredClusterName }}
 MeteredResourceCRN = {{ metering.meteredClusterCrn }}
