CB-16975. Support encryption between for vmagents and exporters
details:
- add new cert-helper.sh script to generate key+cert for cdp-vmagent and exporters
- set cdp-vmagent and exporters configurations to use TLS

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
@@ -35,6 +35,7 @@ ExecStart=/opt/cdp-vmagent/bin/vmagent-prod -remoteWrite.url={{ monitoring.remot
 {%- if use_proxy %}
      -remoteWrite.proxyURL={{ telemetry.proxyUrl }} \
 {%- endif %}
+     -tls -tlsCertFile=/opt/cdp-vmagent/conf/vmagent.crt -tlsKeyFile=/opt/cdp-vmagent/conf/vmagent.key \
      -promscrape.config=/opt/cdp-vmagent/prometheus.yml
 Restart=always
 
