CB-16987. basic auth between vmagent/exporter communication
details:
- pass basic auth configuration for exporters
- exporters using bcrypt hashed pwd, plain text won't work there - and bycrpty password cannot be repeated on next run - so it would be always a new one for highstates, therefore created a new script that will generate the password and print the encrypted output which will be stored in a file. in case of the file exists, it will only print the file content (there highstate won't show any change on next run, unless the plain text password changed - or changed in the pillar)
- reused node status monitor password for the exporters (similar component)

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service.j2
@@ -1,3 +1,4 @@
+{%- from 'monitoring/settings.sls' import monitoring with context %}
 [Unit]
 Description=CDP BlackBox Exporter
 Wants=network-online.target
@@ -10,7 +11,7 @@ Group=root
 EnvironmentFile=/opt/blackbox_exporter/blackbox.env
 ExecStart=/opt/blackbox_exporter/blackbox_exporter \
     --web.config.file=/opt/blackbox_exporter/blackbox_exporter-web-config.yml \
-    --config.file=/opt/blackbox_exporter/blackbox.yml
+    --config.file=/opt/blackbox_exporter/blackbox.yml --web.listen-address=:{{ monitoring.blackboxExporterPort }}
 
 Restart=always
 
