--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
@@ -35,6 +35,10 @@ ExecStart=/opt/cdp-vmagent/bin/vmagent-prod -remoteWrite.url={{ monitoring.remot
 {%- if use_proxy %}
      -remoteWrite.proxyURL={{ telemetry.proxyUrl }} \
 {%- endif %}
+     -httpListenAddr=:{{ monitoring.agentPort }} \
+{%- if monitoring.username and monitoring.exporterPassword %}
+     -httpAuth.username={{ monitoring.agentUser }} -httpAuth.password={{ monitoring.exporterPassword }} \
+{%- endif %}
      -tls -tlsCertFile=/opt/cdp-vmagent/conf/vmagent.crt -tlsKeyFile=/opt/cdp-vmagent/conf/vmagent.key \
      -promscrape.config=/opt/cdp-vmagent/prometheus.yml
 Restart=always
