--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/blackbox_exporter-web-config.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/blackbox_exporter-web-config.yml.j2
@@ -1,3 +1,10 @@
+{%- from 'monitoring/settings.sls' import monitoring with context %}
 tls_server_config:
   cert_file: /opt/blackbox_exporter/blackbox_exporter.crt
   key_file: /opt/blackbox_exporter/blackbox_exporter.key
+{%- if monitoring.exporterPassword %}
+{%- set command = '/opt/salt/scripts/monitoring-secret-handler.sh ' + monitoring.blackboxExporterUser + ' /opt/blackbox_exporter/blackbox_pwd /opt/blackbox_exporter/basic_auth_cred' %}
+{%- set basic_auth_str = salt['cmd.run'](command) %}
+basic_auth_users:
+  {{ monitoring.blackboxExporterUser }}: {{ basic_auth_str }}
+{%- endif %}
