--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
@@ -7,13 +7,18 @@ scrape_configs:
   - job_name: node_exporter
     scheme: 'https'
     static_configs:
-     - targets: ['localhost:9100']
+     - targets: ['localhost:{{ monitoring.nodeExporterPort }}']
        labels:
          resource_crn: {{ telemetry.clusterCrn }}
          platform: {{ telemetry.platform }}
     relabel_configs:
       - target_label: instance
-        replacement: {{ hostname }}:9100
+        replacement: {{ hostname }}:{{ monitoring.nodeExporterPort }}
+{%- if monitoring.exporterPassword %}
+    basic_auth:
+      username: {{ monitoring.nodeExporterUser }}
+      password: {{ monitoring.exporterPassword }}
+{%- endif %}
     tls_config:
        insecure_skip_verify: true
   - job_name: 'blackbox'
@@ -34,9 +39,14 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: address
       - target_label: __address__
-        replacement: 127.0.0.1:9115
+        replacement: 127.0.0.1:{{ monitoring.blackboxExporterPort }}
       - target_label: instance
-        replacement: {{ hostname }}:9115
+        replacement: {{ hostname }}:{{ monitoring.blackboxExporterPort }}
+{%- if monitoring.exporterPassword %}
+    basic_auth:
+      username: {{ monitoring.blackboxExporterUser }}
+      password: {{ monitoring.exporterPassword }}
+{%- endif %}
     tls_config:
       insecure_skip_verify: true
 {%- if monitoring.type == "cloudera_manager" and "manager_server" in grains.get('roles', []) %}
