CB-17079 Added Virtual Group related parameter into Knox's HadoopGroupProvider config

--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
@@ -44,6 +44,10 @@
                 <name>CENTRAL_GROUP_CONFIG_PREFIX</name>
                 <value>gateway.group.config.</value>
             </param>
+            <param>
+                <name>group.mapping.{{ salt['pillar.get']('gateway:envAccessGroup') }}</name>
+                <value>(!= 0 (size groups))</value>
+            </param>
         </provider>
         <provider>
         {%- if salt['pillar.get']('gateway:enable_knox_ranger_authorizer') == True %}
