CB-17399. Create simple custom metrics by nodexporter textfiles.
details:
- add textfiles support for node exporter
- follow the same example for any custom metrics
- the simple example is: gathere salt keys, and put the output numbers for different types to a .prom file

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-node-exporter.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-node-exporter.service.j2
@@ -37,6 +37,7 @@ ExecStart=/opt/node_exporter/node_exporter --web.config=/opt/node_exporter/node_
      {%- endif %}
      {%- endfor %}
 {%- endif %}
+     --collector.textfile --collector.textfile.directory=/var/lib/node_exporter/files \
      --web.disable-exporter-metrics \
      --web.listen-address=:{{ monitoring.nodeExporterPort }}
 
