--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology.xml.j2
@@ -205,6 +205,22 @@
                  <name>{{ aclsauthz_prefix ~ "ssb-ssc-ws.acl" }}</name>
                  <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
              </param>
+             <param>
+                 <name>{{ aclsauthz_prefix ~ "ssb-sse-ui.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+             </param>
+             <param>
+                 <name>{{ aclsauthz_prefix ~ "ssb-sse-ws.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+             </param>
+             <param>
+                 <name>{{ aclsauthz_prefix ~ "ssb-sse-ui-lb.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+             </param>
+             <param>
+                 <name>{{ aclsauthz_prefix ~ "ssb-sse-ws-lb.acl" }}</name>
+                 <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+             </param>
          </provider>
     {%- endif %}
          <provider>
@@ -875,6 +891,41 @@
         <role>SSB-SSC-WS</role>
         {% for hostloc in salt['pillar.get']('gateway:location')['STREAMING_SQL_CONSOLE'] -%}
         <url>{% if protocol == 'https' %}wss{% else %}ws{% endif %}://{{ hostloc }}:{{ ports['SSB-SSC-WS'] }}</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {%- endif %}
+
+    {% if 'STREAMING_SQL_ENGINE' in salt['pillar.get']('gateway:location') -%}
+    {% if 'SSB-SSE-UI' in exposed -%}
+    <service>
+        <role>SSB-SSE-UI</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['STREAMING_SQL_ENGINE'] -%}
+        <url>{{ protocol }}://{{ hostloc }}:{{ ports['SSB-SSE-UI'] }}</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {% if 'SSB-SSE-WS' in exposed -%}
+    <service>
+        <role>SSB-SSE-WS</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['STREAMING_SQL_ENGINE'] -%}
+        <url>{% if protocol == 'https' %}wss{% else %}ws{% endif %}://{{ hostloc }}:{{ ports['SSB-SSE-WS'] }}</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {% if 'SSB-SSE-UI-LB' in exposed -%}
+    <service>
+        <role>SSB-SSE-UI-LB</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['STREAMING_SQL_ENGINE'] -%}
+        <url>{{ protocol }}://{{ hostloc }}:{{ ports['SSB-SSE-UI-LB'] }}</url>
+        {%- endfor %}
+    </service>
+    {%- endif %}
+    {% if 'SSB-SSE-WS' in exposed -%}
+    <service>
+        <role>SSB-SSE-WS-LB</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['STREAMING_SQL_ENGINE'] -%}
+        <url>{% if protocol == 'https' %}wss{% else %}ws{% endif %}://{{ hostloc }}:{{ ports['SSB-SSE-WS-LB'] }}</url>
         {%- endfor %}
     </service>
     {%- endif %}
