CB-17419. Configure/start cdp-request-signer by salt (FreeIPA/DL/DH) - add request signer configs for common-config - extends monitoring configurations with request signer configs - pass configs to monitoring salt states - start cdp-request-signer process if it is used, redirect vmagent requests to this signer process - use TLS + basic auth for the request signer - get rid of noproxy_check.py - as request signer will support proxies

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/node_exporter-web-config.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/node_exporter-web-config.yml.j2
@@ -2,7 +2,7 @@
 tls_server_config:
   cert_file: /opt/node_exporter/node_exporter.crt
   key_file: /opt/node_exporter/node_exporter.key
-{%- if monitoring.exporterPassword %}
+{%- if monitoring.localPassword %}
 {%- set command = '/opt/salt/scripts/monitoring-secret-handler.sh ' + monitoring.nodeExporterUser + ' /opt/node_exporter/node_pwd /opt/node_exporter/basic_auth_cred' %}
 {%- set basic_auth_str = salt['cmd.run'](command)  %}
 basic_auth_users:
