--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/remote_pwd_file.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/remote_pwd_file.j2
@@ -1,4 +1,1 @@
-{%- from 'monitoring/settings.sls' import monitoring with context %}
-{%- if monitoring.password %}
-{{ monitoring.password }}
-{%- endif %}
+{%- from 'monitoring/settings.sls' import monitoring with context %}{%- if monitoring.password %}{{ monitoring.password }}{%- endif %}
