--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
@@ -1,19 +1,5 @@
 {%- from 'telemetry/settings.sls' import telemetry with context %}
 {%- from 'monitoring/settings.sls' import monitoring with context %}
-{%- if telemetry.proxyUrl %}
-  {%- if telemetry.noProxyHosts %}
-    {%- set proxy_bypass = salt.cmd.run('python3 /opt/cdp-vmagent/noproxy_check.py ' + monitoring.remoteWriteUrl + ' ' + telemetry.noProxyHosts) %}
-    {%- if proxy_bypass == "true" %}
-      {%- set use_proxy = False %}
-    {%- else %}
-      {%- set use_proxy = True %}
-    {%- endif %}
-  {%- else %}
-    {%- set use_proxy = True %}
-  {%- endif %}
-{%- else %}
-  {%- set use_proxy = False %}
-{%- endif %}
 [Unit]
 Description=CDP VM agent for collecting metrics
 Wants=network-online.target
@@ -23,21 +9,31 @@ After=network-online.target
 Type=simple
 User=root
 Group=root
-ExecStart=/opt/cdp-vmagent/bin/vmagent-prod -remoteWrite.url={{ monitoring.remoteWriteUrl }} \
-{%- if monitoring.username %}
-     -remoteWrite.basicAuth.username={{ monitoring.username }} \
-{%- if monitoring.password %}
-     -remoteWrite.basicAuth.passwordFile=/opt/cdp-vmagent/remote_pwd_file \
-{%- endif %}
-{%- elif monitoring.token %}
-     -remoteWrite.bearerTokenFile=/opt/cdp-vmagent/remote_token_file \
-{%- endif %}
-{%- if use_proxy %}
+ExecStart=/opt/cdp-vmagent/bin/vmagent-prod \
+{%- if monitoring.requestSignerEnabled %}
+     -remoteWrite.url=https://localhost:{{ monitoring.requestSignerPort }} \
+     -remoteWrite.tlsInsecureSkipVerify=true \
+     -remoteWrite.basicAuth.username={{ monitoring.requestSignerUser }} \
+     {%- if monitoring.localPassword %}
+     -remoteWrite.basicAuth.passwordFile=/opt/cdp-vmagent/request_signer_pwd_file \
+     {%- endif %}
+{%- else %}
+     -remoteWrite.url={{ monitoring.remoteWriteUrl }} \
+     {%- if telemetry.proxyUrl %}
      -remoteWrite.proxyURL={{ telemetry.proxyUrl }} \
+     {%- endif %}
+     {%- if monitoring.username %}
+     -remoteWrite.basicAuth.username={{ monitoring.username }} \
+       {%- if monitoring.password %}
+     -remoteWrite.basicAuth.passwordFile=/opt/cdp-vmagent/remote_pwd_file \
+       {%- endif %}
+     {%- elif monitoring.token %}
+     -remoteWrite.bearerTokenFile=/opt/cdp-vmagent/remote_token_file \
+     {%- endif %}
 {%- endif %}
      -httpListenAddr=:{{ monitoring.agentPort }} \
-{%- if monitoring.username and monitoring.exporterPassword %}
-     -httpAuth.username={{ monitoring.agentUser }} -httpAuth.password={{ monitoring.exporterPassword }} \
+{%- if monitoring.username and monitoring.localPassword %}
+     -httpAuth.username={{ monitoring.agentUser }} -httpAuth.password={{ monitoring.localPassword }} \
 {%- endif %}
      -tls -tlsCertFile=/opt/cdp-vmagent/conf/vmagent.crt -tlsKeyFile=/opt/cdp-vmagent/conf/vmagent.key \
      -remoteWrite.maxDiskUsagePerURL={{ monitoring.agentMaxDiskUsage }} \
