--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/blackbox_exporter-web-config.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/blackbox_exporter-web-config.yml.j2
@@ -2,7 +2,7 @@
 tls_server_config:
   cert_file: /opt/blackbox_exporter/blackbox_exporter.crt
   key_file: /opt/blackbox_exporter/blackbox_exporter.key
-{%- if monitoring.exporterPassword %}
+{%- if monitoring.localPassword %}
 {%- set command = '/opt/salt/scripts/monitoring-secret-handler.sh ' + monitoring.blackboxExporterUser + ' /opt/blackbox_exporter/blackbox_pwd /opt/blackbox_exporter/basic_auth_cred' %}
 {%- set basic_auth_str = salt['cmd.run'](command) %}
 basic_auth_users:
