--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/exporter_pwd_file.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/exporter_pwd_file.j2
@@ -1,1 +1,1 @@
-{%- from 'monitoring/settings.sls' import monitoring with context %}{{ monitoring.exporterPassword }}
+{%- from 'monitoring/settings.sls' import monitoring with context %}{{ monitoring.localPassword }}
