CB-17541. Metrics not published to central prometheus if request signer is enabled but databus is not.

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-vmagent.service.j2
@@ -10,7 +10,7 @@ Type=simple
 User=root
 Group=root
 ExecStart=/opt/cdp-vmagent/bin/vmagent-prod \
-{%- if monitoring.requestSignerEnabled %}
+{%- if monitoring.requestSignerEnabled and monitoring.databusEnabled%}
      -remoteWrite.url=https://localhost:{{ monitoring.requestSignerPort }} \
      -remoteWrite.tlsInsecureSkipVerify=true \
      -remoteWrite.basicAuth.username={{ monitoring.requestSignerUser }} \
