CB-17987. FIx request-singer use token header usage.

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/cdp-request-signer.yaml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/cdp-request-signer.yaml.j2
@@ -14,7 +14,7 @@ sign:
   token_header_name: "x-altus-token"
   token_date_file: "/opt/cdp-request-signer/conf/token_exp"
   token_validity_min: {{ monitoring.requestSignerTokenValidityMin }}
-  use_token_heder: {{ monitoring.requestSignerUseToken }}
+  use_token_header: {{ monitoring.requestSignerUseToken }}
   use_msg_header: true
 client:
   dump: false
