--- a/orchestrator-salt/src/main/resources/salt-common/salt/filecollector/template/support_bundle_databus.conf.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/filecollector/template/support_bundle_databus.conf.j2
@@ -1,4 +1,4 @@
 {%- from 'filecollector/settings.sls' import filecollector with context %}[dbus]
 databus_access_key_id={{ filecollector.supportBundleDbusAccessKey }}
 databus_access_secret_key={{ filecollector.supportBundleDbusPrivateKey }}
-databus_access_secret_key_algo=Ed25519
+databus_access_secret_key_algo={{ filecollector.supportBundleAccessKeyType }}
