CB-18412. Use min_backoff and max_backoff values for remote writes by prometheus agents.
details:
- there was a 3 day outage for thanos on last week, the load grew really huge during that time because of the remote write request replays.
- increase default min/max backoff (15ms / 5s to 1s / 20m)
- see: https://prometheus.io/docs/practices/remote_write/

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
@@ -41,6 +41,9 @@ remote_write:
       credentials_file: /opt/cdp-prometheus/remote_token_file
     {%- endif %}
   {%- endif %}
+    queue_config:
+      min_backoff: {{ monitoring.minBackoff }}
+      max_backoff: {{ monitoring.maxBackoff }}
     tls_config:
       insecure_skip_verify: true
 {%- endif %}
