CB-18258 Generate ECDSA based access key if it is enabled in UMS and packages on image support it.

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/cdp-request-signer.yaml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/cdp-request-signer.yaml.j2
@@ -15,6 +15,7 @@ credential:
   profile: dbus
   access_key_name: monitoring_access_key_id
   secret_key_name: monitoring_access_secret_key
+  sign_algorithm_name: monitoring_access_secret_key_algo
 sign:
   auth_header_name: "x-altus-auth"
   date_header_name: "x-altus-date"
