CB-19112 Update Knox salt scripts to round robin load balance between SchemaRegistry instances

--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_token.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_token.xml.j2
@@ -277,7 +277,7 @@
              {% if 'SCHEMA-REGISTRY' in exposed and 'SCHEMA_REGISTRY_SERVER' in salt['pillar.get']('gateway:location') -%}
              <param>
                  <name>SCHEMA-REGISTRY</name>
-                 <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000</value>
+                 <value>enabled=true;maxFailoverAttempts=3;failoverSleep=1000;enableLoadBalancing=true</value>
              </param>
              {%- endif %}
              {% if 'HBASEJARS' in exposed and 'MASTER' in salt['pillar.get']('gateway:location') -%}
