--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/template/prometheus.yml.j2
@@ -10,7 +10,13 @@
     {%- set instance_name = instance_cmd_output %}
   {%- endif %}
   {%- if salt['pkg.version_cmp'](telemetry.cdpTelemetryPackageVersion,'0.4.29-1') >= 0 %}
-    {%- set get_doctor_addresses = "cdp-doctor network addresses --format json --cloud-provider {} --databus-url {} --databus-s3-url {}".format(telemetry.platform, telemetry.databusEndpoint, telemetry.databusS3Endpoint) %}
+    {%- set get_doctor_addresses = "cdp-doctor network addresses --format json --cloud-provider {}".format(telemetry.platform) %}
+    {%- if telemetry.databusEndpoint is defined and telemetry.databusEndpoint|length %}
+      {%- set get_doctor_addresses = "{} --databus-url {}".format(get_doctor_addresses, telemetry.databusEndpoint) %}
+    {%- endif %}
+    {%- if telemetry.databusS3Endpoint is defined and telemetry.databusS3Endpoint|length %}
+          {%- set get_doctor_addresses = "{} --databus-s3-url {}".format(get_doctor_addresses, telemetry.databusS3Endpoint) %}
+    {%- endif %}
     {%- set doctorNetworkAddresses = salt.cmd.run(get_doctor_addresses) | load_json %}
     {%- set blackboxClouderaUrls = doctorNetworkAddresses['cloudera'] %}
     {%- set blackboxCloudUrls = doctorNetworkAddresses['cloud'] %}
