CB-19964 Added cdp-prometheus and cdp-request-signer logs to watched dirs by fluentd This commit adds the cdp-prometheus and cdp-request-signer logs to the list of logs uploaded to the cloud storage by fluentd. The cdp-prometheus logs are redirected to a file in the ExecStart field of the unit file, because our VMs only have systemd version 219 and redirecting to a file, using the StandardOutput and StandardError fields, is only available in systemd version 236 and up. In this commit I also set up log rotation using logrotate for cdp-prometheus. The cdp-request-signer service has log rotation built in.

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-prometheus.service.j2
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-prometheus.service.j2
@@ -9,7 +9,7 @@ After=network-online.target
 Type=simple
 User=root
 Group=root
-ExecStart=/opt/cdp-prometheus/prometheus \
+ExecStart=/bin/sh -c "/opt/cdp-prometheus/prometheus \
      --enable-feature=agent \
      --storage.agent.path=/opt/cdp-prometheus/data-agent \
      --storage.agent.wal-compression \
@@ -25,7 +25,8 @@ ExecStart=/opt/cdp-prometheus/prometheus \
      --storage.agent.no-lockfile \
      --config.file=/opt/cdp-prometheus/prometheus.yml \
      --web.config.file=/opt/cdp-prometheus/prometheus-web-config.yml \
-     --web.listen-address=:{{ monitoring.agentPort }}
+     --web.listen-address=:{{ monitoring.agentPort }} \
+     >>/var/log/cdp-prometheus/cdp-prometheus.log 2>&1"
 Restart=always
 
 [Install]
