--- a/freeipa/src/main/resources/freeipa-salt/salt/freeipa/templates/freeipa_backup.conf.j2
+++ b/freeipa/src/main/resources/freeipa-salt/salt/freeipa/templates/freeipa_backup.conf.j2
@@ -5,3 +5,4 @@ azure_instance_msi={{freeipa.azure_instance_msi}}
 gcp_service_account={{freeipa.gcp_service_account}}
 http_proxy={{freeipa.http_proxy}}
 aws_region={{freeipa.aws_region}}
+aws_endpoint={{freeipa.aws_endpoint}}
