--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/knoxsso.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/knoxsso.xml.j2
@@ -138,6 +138,10 @@
             <value>86400000</value>
         </param>
         <param>
+             <name>knoxsso.cookie.samesite</name>
+             <value>Lax</value>
+        </param>
+        <param>
            <name>knoxsso.redirect.whitelist.regex</name>
            {% if salt['pillar.get']('gateway:userfacingdomain') is defined and salt['pillar.get']('gateway:userfacingdomain')|length > 1 %}
            <value>^\/.*$;^https?:\/\/(.+\.{{ salt['pillar.get']('gateway:userfacingdomain') }})(?::[0-9]+)?(?:\/.*)?$</value>
