CB-20866 Encode periscope machineUser to provide a deterministic workloadUserName  - Autoscale machine user is whitelisted using salt pillars  - All new DHs will have the whitelisted autoscale machine user  - Additionally, cdp-token.xml.j2 has been modified to correct a typo in knox acls, i.e, knox.acl.mode is changed to knoxtoken.acl.mode (part of CB-20991)
Testing
 - Tested out by launching multiple DHs and verified their corresponding knox topologies

--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/cdp-token.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/cdp-token.xml.j2
@@ -34,12 +34,12 @@
          <name>AclsAuthz</name>
          <enabled>true</enabled>
          <param>
-            <name>knox.acl.mode</name>
-            <value>AND</value>
+            <name>knoxtoken.acl.mode</name>
+            <value>OR</value>
          </param>
          <param>
             <name>knoxtoken.acl</name>
-            <value>*;{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
+            <value>{{ salt['pillar.get']('gateway:autoscaleMachineUser') }};{{ salt['pillar.get']('gateway:envAccessGroup') }};*</value>
          </param>
       </provider>
 {% endif %}
