--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
@@ -569,6 +569,17 @@
     {%- endif %}
     {%- endif %}
 
+    {% if 'EFM_SERVER' in salt['pillar.get']('gateway:location') -%}
+        {% if 'EFM-API' in exposed -%}
+        <service>
+            <role>EFM-API</role>
+            {% for hostloc in salt['pillar.get']('gateway:location')['EFM_SERVER'] -%}
+            <url>{{ protocol }}://{{ hostloc }}:{{ ports['EFM-API'] }}</url>
+            {%- endfor %}
+        </service>
+        {%- endif %}
+    {%- endif %}
+
     {% if 'STREAMS_MESSAGING_MANAGER_SERVER' in salt['pillar.get']('gateway:location') -%}
     {% if 'SMM-API' in exposed -%}
     <service>
